fix(header): fix the problem where scrollbar is hidden by the header

--- a/src/less/website/header.less
+++ b/src/less/website/header.less
@@ -9,8 +9,7 @@
 
     overflow: visible;
     height: @header-height;
-    padding: 0px 8px;
-    z-index: 999;
+    z-index: 1;
 
     font-size: 0.85em;
     color: @header-color;
