--- a/src/less/website/summary.less
+++ b/src/less/website/summary.less
@@ -7,7 +7,7 @@
     top: 0px;
     left: -@sidebar-width;
     bottom: 0px;
-    z-index: 1;
+    z-index: 2;
     overflow-y: auto;
 
     margin-top: 0;
